<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChartActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartCurrency"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circulatingSupply" />

    <ProgressBar
        android:id="@+id/progressChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:padding="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/chartCurrency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circulatingSupply" />

    <ImageView
        android:id="@+id/ivCurrencyDetailIcon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/description_image"
        android:src="@drawable/bitcoin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/marketCap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/market_cap_rank_text"
        app:layout_constraintStart_toEndOf="@+id/ivCurrencyDetailIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/marketCapChange"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="2dp"
        android:text="@string/market_cap_change"
        app:layout_constraintStart_toStartOf="@+id/marketCap"
        app:layout_constraintTop_toBottomOf="@id/marketCap" />

    <TextView
        android:id="@+id/ath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/all_time_high_ath_text"
        app:layout_constraintStart_toStartOf="@id/marketCap"
        app:layout_constraintTop_toBottomOf="@id/marketCapChange" />

    <TextView
        android:id="@+id/athChangePercantage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/all_time_high_ath_perc"
        app:layout_constraintStart_toStartOf="@id/marketCap"
        app:layout_constraintTop_toBottomOf="@id/ath" />

    <TextView
        android:id="@+id/circulatingSupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/circulating_supply"
        app:layout_constraintStart_toStartOf="@id/marketCap"
        app:layout_constraintTop_toBottomOf="@id/athChangePercantage" />



    <TextView
        android:id="@+id/tvDetailMarketCapRank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMarketCapChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDetailMarketCapRank" />

    <TextView
        android:id="@+id/tvATH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMarketCapChange" />

    <TextView
        android:id="@+id/tvAthChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvATH" />

    <TextView
        android:id="@+id/tvCirculatingSupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAthChange" />



</androidx.constraintlayout.widget.ConstraintLayout>